--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="header">
+        Logo
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three</a>
+    </div>
+    <div class="herotext">
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button>Sign Up</button>
+        <img src="img/" alt="This is a placeholder">
+    </div>
+
+    <div class="center">
+        <h1>Some random information.</h1>
+        <div class="media">
+            <img src="img/" alt="Image1">
+            <p>this is some subtext</p>
+        </div>
+        <div class="media">
+            <img src="img/" alt="Image1">
+            <p>this is some subtext</p>
+        </div>
+        <div class="media">
+            <img src="img/" alt="Image1">
+            <p>this is some subtext</p>
+        </div>
+        <div class="media">
+            <img src="img/" alt="Image1">
+            <p>this is some subtext</p>
+        </div>
+
+        <div class="quote">Some text</div>
     
+    
+        <div class="card">
+            <h1>Call to action! It's time!</h1>
+            Sign up blablabla
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        Copyright The odin Project 2021
+
+
+    </div>
 </body>
 </html>
