Adding styles to header and links

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <div class="header">
-        Logo
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
+        <div>Header Logo</div>
+        <ul class="link">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+        </ul>
     </div>
     <div class="herotext">
+        <div class="container">
+            <div class="herotextheader">This website is awesome</div>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign Up</button>
+        <button class="signup">Sign Up</button>
+    </div>
         <img src="img/" alt="This is a placeholder">
     </div>
 
@@ -45,7 +50,7 @@
         <div class="card">
             <h1>Call to action! It's time!</h1>
             Sign up blablabla
-            <button>Sign up</button>
+            <button class="signup">Sign Up</button>
         </div>
     </div>
 
