--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div class="logo">Header Logo</div>
         <ul class="link">
             <a href="">header link one</a>
             <a href="">header link two</a>
