--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             </div>
     </div>
     </div>
-        <div class="quote">Some text</div>
+        <div class="quote">
+            <div>This is an inspriing quote, or a testimonaial from a customer. Maybe it's just filling up space,...</div>
+            <div class="boldquote">-Thor, God of Thunder</div>
+        </div>
     
     
         <div class="card">
