Rough implementation of the footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
 
     <div class="footer">
-        Copyright The odin Project 2021
+        Copyright &copy The Odin Project 2021
 
 
     </div>
